--- a/src/main/webapp/WEB-INF/themes/desktop/sass/_utilities.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/_utilities.scss
@@ -205,7 +205,7 @@ example | extension
     background-color: $setcolor;
     color: $text-color;
     &:hover {
-      background-color: $plos-default;
+      background-color: darken($setcolor, 10%);
       color: $text-color-hover;
     }
   }
@@ -221,7 +221,7 @@ example | extension
       }
       .jcarousel-prev,
       .jcarousel-next {
-        color: darken($setcolor, 18%);
+        color: darken($setcolor, 20%);
         &:hover {
           @extend %brand-background-hover;
         }
@@ -237,7 +237,7 @@ example | extension
       }
       .jcarousel-prev,
       .jcarousel-next {
-        color: darken($setcolor, 13%);
+        color: darken($setcolor, 10%);
         &:hover {
           @extend %brand-background-hover;
         }
