--- a/src/main/webapp/WEB-INF/themes/desktop/sass/site-content.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/site-content.scss
@@ -55,6 +55,9 @@ main nav ul {
   .plosone & {
     a {
       color: $plos-one-purple;
+      &:hover {
+        color: $grey-med;
+      }
     }
   }
 
